生成配置文件、依赖文件等；

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
+# 配置你的Dify API Key
 DIFY_API_KEY = 'app-gZDj2Fpo8TvfXcigLu89TKb5'
+
+# 配置你的飞书机器人应用的 App ID 和 App Secret
+APP_ID = 'cli_a6e16d43c1f0100c'
+APP_SECRET = 'cA09Dt44pfUNzk6I9c3CveqDRaLvbxKA'
