实现接收消息机器人调用DIFY生成内容以消息卡片模板形式回复

--- a/.env
+++ b/.env
@@ -4,3 +4,49 @@ DIFY_API_KEY = 'app-X8nUfOsl6Bbtp5pnviKAf1PL'
 # 配置你的飞书机器人应用的 App ID 和 App Secret
 APP_ID = 'cli_a6e16d43c1f0100c'
 APP_SECRET = 'cA09Dt44pfUNzk6I9c3CveqDRaLvbxKA'
+
+'''
+FEISHU_CARD_TEMPLATES={
+    "waiting_message_card": {                   # 消息卡片模板
+        "template_id": "AAqHgvQHmb0Yp",         # 模板ID
+        "template_variable": {                  # 模板变量
+
+        }         
+    },
+    "reply_message_card": {                     # 消息卡片模板
+        "template_id": "AAqHgxHLPqnHd",         # 模板ID
+        "template_variable": {                  # 模板变量
+            "answer": "", 
+            "nextQ_A": "",
+            "nextQ_B": "",
+            "nextQ_C": "",
+        }                 
+    },
+    "first_meeting_card": {                     # 消息卡片模板
+        "template_id": "AAqHg8SNnefQz",         # 模板ID
+        "template_variable": {}                 # 模板变量
+    },
+}
+'''
+FEISHU_CARD_TEMPLATES='{
+    "waiting_message_card": {                  
+        "template_id": "AAqHgvQHmb0Yp",        
+        "template_variable": {
+            "waitText": ""
+        }         
+    },
+    "reply_message_card": {                    
+        "template_id": "AAqHgxHLPqnHd",        
+        "template_variable": {                
+            "answer": "", 
+            "nextQ_A": "",
+            "nextQ_B": "",
+            "nextQ_C": ""
+        }                 
+    },
+    "first_meeting_card": {                    
+        "template_id": "AAqHg8SNnefQz",        
+        "template_variable": {}              
+    }
+}'
+
