--- a/.env
+++ b/.env
@@ -1,9 +1,17 @@
 # 配置你的Dify API Key
 DIFY_API_KEY = 'app-X8nUfOsl6Bbtp5pnviKAf1PL'
 
-# 配置你的飞书机器人应用的 App ID 和 App Secret
+# 配置你的飞书机器人应用的 App ID 和 App Secret  个人测试墨趣书法
 APP_ID = 'cli_a6e16d43c1f0100c'
-APP_SECRET = 'cA09Dt44pfUNzk6I9c3CveqDRaLvbxKA'
+APP_SECRET = 'cA09Dt44pfUNzk6I9c3CveqDRaLvbxKA'  
+
+# 墨趣书法生产环境
+# APP_ID = 'cli_a6f8482264e4100b'
+# APP_SECRET = 'HjlyQPH21jAO9zxi3Tp68eZfZGNlPqsU'
+
+# 按Token索骥
+# APP_ID = 'cli_a6e4144fb138100c'
+# APP_SECRET = '7G5bTYvcZi9qsayjFtRyihvk2A74XyoJ'
 
 '''
 FEISHU_CARD_TEMPLATES={
