更新oss密钥获取方式，从.env中获取

--- a/.env
+++ b/.env
@@ -14,6 +14,10 @@ DIFY_API_KEY = 'app-9lCW6xi3bgogK6fJsBt1pxp0'
 APP_ID = 'cli_a6e4144fb138100c'
 APP_SECRET = '7G5bTYvcZi9qsayjFtRyihvk2A74XyoJ'
 
+ACCESS_KEY_ID=LTAI5tS5YkBn4yHHFkYNydea
+ACCESS_KEY_SECRET=6U1eJsGb0ivlSfA6CJbQuVLHLcAIhJ
+ENDPOINT=https://oss-cn-shenzhen.aliyuncs.com
+
 '''
 FEISHU_CARD_TEMPLATES={
     "waiting_message_card": {                   # 消息卡片模板
